fml-vscode-extension/fml-validator/src/generated/mappingParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { mappingListener } from "./mappingListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class mappingParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly T__4 = 5;
    public static readonly T__5 = 6;
    public static readonly T__6 = 7;
    public static readonly T__7 = 8;
    public static readonly T__8 = 9;
    public static readonly T__9 = 10;
    public static readonly T__10 = 11;
    public static readonly T__11 = 12;
    public static readonly T__12 = 13;
    public static readonly T__13 = 14;
    public static readonly T__14 = 15;
    public static readonly T__15 = 16;
    public static readonly T__16 = 17;
    public static readonly T__17 = 18;
    public static readonly T__18 = 19;
    public static readonly T__19 = 20;
    public static readonly T__20 = 21;
    public static readonly T__21 = 22;
    public static readonly T__22 = 23;
    public static readonly T__23 = 24;
    public static readonly T__24 = 25;
    public static readonly T__25 = 26;
    public static readonly T__26 = 27;
    public static readonly T__27 = 28;
    public static readonly T__28 = 29;
    public static readonly T__29 = 30;
    public static readonly T__30 = 31;
    public static readonly T__31 = 32;
    public static readonly T__32 = 33;
    public static readonly T__33 = 34;
    public static readonly T__34 = 35;
    public static readonly T__35 = 36;
    public static readonly T__36 = 37;
    public static readonly T__37 = 38;
    public static readonly T__38 = 39;
    public static readonly T__39 = 40;
    public static readonly T__40 = 41;
    public static readonly T__41 = 42;
    public static readonly T__42 = 43;
    public static readonly T__43 = 44;
    public static readonly T__44 = 45;
    public static readonly T__45 = 46;
    public static readonly T__46 = 47;
    public static readonly T__47 = 48;
    public static readonly T__48 = 49;
    public static readonly T__49 = 50;
    public static readonly T__50 = 51;
    public static readonly T__51 = 52;
    public static readonly T__52 = 53;
    public static readonly T__53 = 54;
    public static readonly T__54 = 55;
    public static readonly T__55 = 56;
    public static readonly T__56 = 57;
    public static readonly T__57 = 58;
    public static readonly T__58 = 59;
    public static readonly T__59 = 60;
    public static readonly T__60 = 61;
    public static readonly T__61 = 62;
    public static readonly T__62 = 63;
    public static readonly T__63 = 64;
    public static readonly T__64 = 65;
    public static readonly T__65 = 66;
    public static readonly T__66 = 67;
    public static readonly T__67 = 68;
    public static readonly T__68 = 69;
    public static readonly T__69 = 70;
    public static readonly T__70 = 71;
    public static readonly T__71 = 72;
    public static readonly T__72 = 73;
    public static readonly T__73 = 74;
    public static readonly T__74 = 75;
    public static readonly T__75 = 76;
    public static readonly T__76 = 77;
    public static readonly T__77 = 78;
    public static readonly T__78 = 79;
    public static readonly T__79 = 80;
    public static readonly T__80 = 81;
    public static readonly T__81 = 82;
    public static readonly T__82 = 83;
    public static readonly T__83 = 84;
    public static readonly T__84 = 85;
    public static readonly T__85 = 86;
    public static readonly T__86 = 87;
    public static readonly T__87 = 88;
    public static readonly NULL_LITERAL = 89;
    public static readonly BOOL = 90;
    public static readonly DATE = 91;
    public static readonly DATETIME = 92;
    public static readonly TIME = 93;
    public static readonly LONGNUMBER = 94;
    public static readonly DECIMAL = 95;
    public static readonly INTEGER = 96;
    public static readonly ID = 97;
    public static readonly IDENTIFIER = 98;
    public static readonly DELIMITEDIDENTIFIER = 99;
    public static readonly STRING = 100;
    public static readonly DOUBLE_QUOTED_STRING = 101;
    public static readonly TRIPLE_QUOTED_STRING_LITERAL = 102;
    public static readonly WS = 103;
    public static readonly COMMENT = 104;
    public static readonly METADATA_PREFIX = 105;
    public static readonly LINE_COMMENT = 106;
    public static readonly RULE_structureMap = 0;
    public static readonly RULE_conceptMapDeclaration = 1;
    public static readonly RULE_conceptMapPrefix = 2;
    public static readonly RULE_conceptMapCodeMap = 3;
    public static readonly RULE_conceptMapSource = 4;
    public static readonly RULE_conceptMapTarget = 5;
    public static readonly RULE_code = 6;
    public static readonly RULE_mapDeclaration = 7;
    public static readonly RULE_metadataDeclaration = 8;
    public static readonly RULE_markdownLiteral = 9;
    public static readonly RULE_url = 10;
    public static readonly RULE_identifier = 11;
    public static readonly RULE_structureDeclaration = 12;
    public static readonly RULE_constantDeclaration = 13;
    public static readonly RULE_groupDeclaration = 14;
    public static readonly RULE_parameters = 15;
    public static readonly RULE_parameter = 16;
    public static readonly RULE_mapRules = 17;
    public static readonly RULE_typeMode = 18;
    public static readonly RULE_extends = 19;
    public static readonly RULE_typeIdentifier = 20;
    public static readonly RULE_mapRule = 21;
    public static readonly RULE_mapTransformationRule = 22;
    public static readonly RULE_identityFieldList = 23;
    public static readonly RULE_ruleName = 24;
    public static readonly RULE_ruleSources = 25;
    public static readonly RULE_ruleSource = 26;
    public static readonly RULE_ruleTargets = 27;
    public static readonly RULE_ruleTarget = 28;
    public static readonly RULE_sourceCardinality = 29;
    public static readonly RULE_upperBound = 30;
    public static readonly RULE_qualifiedIdentifier = 31;
    public static readonly RULE_sourceDefault = 32;
    public static readonly RULE_alias = 33;
    public static readonly RULE_whereClause = 34;
    public static readonly RULE_checkClause = 35;
    public static readonly RULE_log = 36;
    public static readonly RULE_dependentExpression = 37;
    public static readonly RULE_importDeclaration = 38;
    public static readonly RULE_transform = 39;
    public static readonly RULE_transformInvocation = 40;
    public static readonly RULE_transformParamList = 41;
    public static readonly RULE_transformParam = 42;
    public static readonly RULE_transformParamName = 43;
    public static readonly RULE_transformParamValue = 44;
    public static readonly RULE_groupInvocation = 45;
    public static readonly RULE_groupParamList = 46;
    public static readonly RULE_groupParam = 47;
    public static readonly RULE_fpExpression = 48;
    public static readonly RULE_fpTerm = 49;
    public static readonly RULE_fpInvocation = 50;
    public static readonly RULE_fpExternalConstant = 51;
    public static readonly RULE_fpFunction = 52;
    public static readonly RULE_fpSortArgument = 53;
    public static readonly RULE_fpParamList = 54;
    public static readonly RULE_fpTypeSpecifier = 55;
    public static readonly RULE_constant = 56;
    public static readonly RULE_sourceListMode = 57;
    public static readonly RULE_targetListMode = 58;
    public static readonly RULE_groupTypeMode = 59;
    public static readonly RULE_modelMode = 60;
    public static readonly RULE_parameterMode = 61;
    public static readonly RULE_literal = 62;
    public static readonly RULE_fpQuantity = 63;

    public static readonly literalNames = [
        null, "'conceptmap'", "'{'", "'}'", "'prefix'", "'='", "'-'", "':'", 
        "'map'", "'as'", "'contains'", "'in'", "'is'", "'asc'", "'desc'", 
        "'sort'", "'uses'", "'alias'", "'let'", "';'", "'group'", "'('", 
        "','", "')'", "'<<'", "'>>'", "'extends'", "'->'", "'..'", "'*'", 
        "'imports'", "'source'", "'target'", "'types'", "'where'", "'check'", 
        "'div'", "'first'", "'last'", "'.'", "'default'", "'log'", "'then'", 
        "'['", "']'", "'+'", "'/'", "'mod'", "'&'", "'|'", "'<='", "'<'", 
        "'>'", "'>='", "'~'", "'!='", "'!~'", "'and'", "'or'", "'xor'", 
        "'implies'", "'$this'", "'$index'", "'$total'", "'%'", "'not_first'", 
        "'not_last'", "'only_one'", "'share'", "'single'", "'type+'", "'queried'", 
        "'produced'", "'year'", "'month'", "'week'", "'day'", "'hour'", 
        "'minute'", "'second'", "'millisecond'", "'years'", "'months'", 
        "'weeks'", "'days'", "'hours'", "'minutes'", "'seconds'", "'milliseconds'", 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, "'/// '"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, "NULL_LITERAL", "BOOL", "DATE", "DATETIME", "TIME", "LONGNUMBER", 
        "DECIMAL", "INTEGER", "ID", "IDENTIFIER", "DELIMITEDIDENTIFIER", 
        "STRING", "DOUBLE_QUOTED_STRING", "TRIPLE_QUOTED_STRING_LITERAL", 
        "WS", "COMMENT", "METADATA_PREFIX", "LINE_COMMENT"
    ];
    public static readonly ruleNames = [
        "structureMap", "conceptMapDeclaration", "conceptMapPrefix", "conceptMapCodeMap", 
        "conceptMapSource", "conceptMapTarget", "code", "mapDeclaration", 
        "metadataDeclaration", "markdownLiteral", "url", "identifier", "structureDeclaration", 
        "constantDeclaration", "groupDeclaration", "parameters", "parameter", 
        "mapRules", "typeMode", "extends", "typeIdentifier", "mapRule", 
        "mapTransformationRule", "identityFieldList", "ruleName", "ruleSources", 
        "ruleSource", "ruleTargets", "ruleTarget", "sourceCardinality", 
        "upperBound", "qualifiedIdentifier", "sourceDefault", "alias", "whereClause", 
        "checkClause", "log", "dependentExpression", "importDeclaration", 
        "transform", "transformInvocation", "transformParamList", "transformParam", 
        "transformParamName", "transformParamValue", "groupInvocation", 
        "groupParamList", "groupParam", "fpExpression", "fpTerm", "fpInvocation", 
        "fpExternalConstant", "fpFunction", "fpSortArgument", "fpParamList", 
        "fpTypeSpecifier", "constant", "sourceListMode", "targetListMode", 
        "groupTypeMode", "modelMode", "parameterMode", "literal", "fpQuantity",
    ];

    public get grammarFileName(): string { return "mapping.g4"; }
    public get literalNames(): (string | null)[] { return mappingParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return mappingParser.symbolicNames; }
    public get ruleNames(): string[] { return mappingParser.ruleNames; }
    public get serializedATN(): number[] { return mappingParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, mappingParser._ATN, mappingParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public structureMap(): StructureMapContext {
        let localContext = new StructureMapContext(this.context, this.state);
        this.enterRule(localContext, 0, mappingParser.RULE_structureMap);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 131;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 0, this.context);
            while (alternative !== 1 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1 + 1) {
                    {
                    {
                    this.state = 128;
                    this.metadataDeclaration();
                    }
                    }
                }
                this.state = 133;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 0, this.context);
            }
            this.state = 137;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 1, this.context);
            while (alternative !== 1 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1 + 1) {
                    {
                    {
                    this.state = 134;
                    this.conceptMapDeclaration();
                    }
                    }
                }
                this.state = 139;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 1, this.context);
            }
            this.state = 141;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 8) {
                {
                this.state = 140;
                this.mapDeclaration();
                }
            }

            this.state = 146;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 3, this.context);
            while (alternative !== 1 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1 + 1) {
                    {
                    {
                    this.state = 143;
                    this.structureDeclaration();
                    }
                    }
                }
                this.state = 148;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 3, this.context);
            }
            this.state = 152;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 4, this.context);
            while (alternative !== 1 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1 + 1) {
                    {
                    {
                    this.state = 149;
                    this.importDeclaration();
                    }
                    }
                }
                this.state = 154;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 4, this.context);
            }
            this.state = 158;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 5, this.context);
            while (alternative !== 1 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1 + 1) {
                    {
                    {
                    this.state = 155;
                    this.constantDeclaration();
                    }
                    }
                }
                this.state = 160;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 5, this.context);
            }
            this.state = 162;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 161;
                this.groupDeclaration();
                }
                }
                this.state = 164;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 20);
            this.state = 166;
            this.match(mappingParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public conceptMapDeclaration(): ConceptMapDeclarationContext {
        let localContext = new ConceptMapDeclarationContext(this.context, this.state);
        this.enterRule(localContext, 2, mappingParser.RULE_conceptMapDeclaration);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 168;
            this.match(mappingParser.T__0);
            this.state = 169;
            this.url();
            this.state = 170;
            this.match(mappingParser.T__1);
            this.state = 172;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 171;
                this.conceptMapPrefix();
                }
                }
                this.state = 174;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 4);
            this.state = 177;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 176;
                this.conceptMapCodeMap();
                }
                }
                this.state = 179;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 97);
            this.state = 181;
            this.match(mappingParser.T__2);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public conceptMapPrefix(): ConceptMapPrefixContext {
        let localContext = new ConceptMapPrefixContext(this.context, this.state);
        this.enterRule(localContext, 4, mappingParser.RULE_conceptMapPrefix);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 183;
            this.match(mappingParser.T__3);
            this.state = 184;
            this.match(mappingParser.ID);
            this.state = 185;
            this.match(mappingParser.T__4);
            this.state = 186;
            this.url();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public conceptMapCodeMap(): ConceptMapCodeMapContext {
        let localContext = new ConceptMapCodeMapContext(this.context, this.state);
        this.enterRule(localContext, 6, mappingParser.RULE_conceptMapCodeMap);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 188;
            this.conceptMapSource();
            this.state = 189;
            this.match(mappingParser.T__5);
            this.state = 190;
            this.conceptMapTarget();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public conceptMapSource(): ConceptMapSourceContext {
        let localContext = new ConceptMapSourceContext(this.context, this.state);
        this.enterRule(localContext, 8, mappingParser.RULE_conceptMapSource);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 192;
            this.match(mappingParser.ID);
            this.state = 193;
            this.match(mappingParser.T__6);
            this.state = 194;
            this.code();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public conceptMapTarget(): ConceptMapTargetContext {
        let localContext = new ConceptMapTargetContext(this.context, this.state);
        this.enterRule(localContext, 10, mappingParser.RULE_conceptMapTarget);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 196;
            this.match(mappingParser.ID);
            this.state = 197;
            this.match(mappingParser.T__6);
            this.state = 198;
            this.code();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public code(): CodeContext {
        let localContext = new CodeContext(this.context, this.state);
        this.enterRule(localContext, 12, mappingParser.RULE_code);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 200;
            _la = this.tokenStream.LA(1);
            if(!(((((_la - 97)) & ~0x1F) === 0 && ((1 << (_la - 97)) & 25) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public mapDeclaration(): MapDeclarationContext {
        let localContext = new MapDeclarationContext(this.context, this.state);
        this.enterRule(localContext, 14, mappingParser.RULE_mapDeclaration);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 202;
            this.match(mappingParser.T__7);
            this.state = 203;
            this.url();
            this.state = 204;
            this.match(mappingParser.T__4);
            this.state = 207;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case mappingParser.T__8:
            case mappingParser.T__9:
            case mappingParser.T__10:
            case mappingParser.T__11:
            case mappingParser.T__12:
            case mappingParser.T__13:
            case mappingParser.T__14:
            case mappingParser.ID:
            case mappingParser.IDENTIFIER:
            case mappingParser.DELIMITEDIDENTIFIER:
                {
                this.state = 205;
                this.identifier();
                }
                break;
            case mappingParser.DOUBLE_QUOTED_STRING:
                {
                this.state = 206;
                this.match(mappingParser.DOUBLE_QUOTED_STRING);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public metadataDeclaration(): MetadataDeclarationContext {
